2010-01-06 quaker66 <quaker66@gmail.com>
	* scripts: added some scripts to be ran before session starts/after login, when entrance shows up and when entrance ends. see readme for more info. the code is implemented inside entrance client and the scripts are purely optional, when they exist and are executable, they're ran, otherwise not.
	* po: unmarked some syslog strings as translatable(why i marked it?)
	* data/themes/darkrock: make it use fontconfig for fonts instead of Vera font. It can show non-ascii characters now.
	* data/fonts: removed since the fonts were just provided for themes and are not used anymore.

2010-01-04 quaker66 <quaker66@gmail.com>
	* ALIVE AGAIN!
	* src/client: make session list scrollability support working, export some strings from edje to C, add option to config to use translatable greeting message
	* src/configgui: simple elementary configuration GUI added
	* src/lib: removed
	* src/config: removed
	* data/config/entrance_edit: it is now a bash script
	* data/themes: added sunshine and moonlight OpenGEU themes, added support for scrollability to default b_and_w theme and blingbling.
	* planning to rewrite completely

2006-08-01 Essien Ita Essien <me@essienitaessien.com>
	* src/daemon/spawner.c: rename functions with lower case, also, name
	callbacks to reflect their subsystem relationships.
	* src/daemon/spawner.c: Extract out Entranced_Display subsystem
	into entranced_display.c and Entranced_Display.h
	* src/daemon/spawner.c: Make private functions static and remove them from
	the Entranced.h header file, since no one else uses them.
	* src/daemon/entranced_display.c: rename functions here too. Move stuff
	around.
2003-10-24 Ibukun Olumuyiwa <ibukun@computer.org>
	* src/daemon/spawner.c: Rewrite complete, spawner
    now works fairly reliably
	* configure.in: Changed ecore checks, added check for
	OpenGL engine support

2003-10-22 Corey Donohoe <atmos@atmos.org>
	* src/client: Support for user faces added
